Fix scrollbars in modalframes on cp layout

--- a/sites/all/themes/openscholar/cp_theme/css/modal.css
+++ b/sites/all/themes/openscholar/cp_theme/css/modal.css
@@ -169,6 +169,7 @@ div.ctools-modal-content .resizable-textarea {
 
 #modalframe-container {
 	padding: 0;
+  overflow: hidden;  
 }
 
 #modalframe-element {
